--- a/Project/iVIS_STM_CUBE_IDE/.project
+++ b/Project/iVIS_STM_CUBE_IDE/.project
@@ -29,4 +29,26 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>AppIVIS</name>
+			<type>2</type>
+			<location>/home/CORP.AIRTIES.COM/zafer.satilmis/workspace_z/iVIS/Application/AppIVIS</location>
+		</link>
+		<link>
+			<name>Documents</name>
+			<type>2</type>
+			<location>/home/CORP.AIRTIES.COM/zafer.satilmis/workspace_z/iVIS/Documents</location>
+		</link>
+		<link>
+			<name>Middleware</name>
+			<type>2</type>
+			<location>/home/CORP.AIRTIES.COM/zafer.satilmis/workspace_z/iVIS/Middleware</location>
+		</link>
+		<link>
+			<name>Platform</name>
+			<type>2</type>
+			<location>/home/CORP.AIRTIES.COM/zafer.satilmis/workspace_z/iVIS/Platform</location>
+		</link>
+	</linkedResources>
 </projectDescription>
